--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -6,22 +6,18 @@ description: How to run quantum computing jobs in batch mode using Qiskit Runtim
 
 # Run jobs in a batch
 
+Use batch mode to submit multiple primitive jobs simultaneously. Following are examples of working with batches.
 
-<Admonition type="caution" title="Important">
-The way batches are started within Qiskit Runtime has changed. **By 1 April 2024**, upgrade to `qiskit-ibm-runtime` version 0.20.0 or later. In addition, ensure you are using Qiskit version 0.45.0 or later. Starting 1 April, batch calls made in earlier versions of these packages will fail.
-</Admonition>
+## Set up to use batches
 
-Batch mode can shorten processing time if all jobs can be provided at the outset. If you want to submit iterative jobs, use [sessions](sessions) instead.  Using batch mode has these benefits:
+Before starting a batch, you must [set up Qiskit Runtime](/guides/install-qiskit) and initialize it as a service:
 
--  The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially.
--  There is usually minimal delay between jobs, which can help avoid drift.
--  If you partition your workload into multiple jobs and run them in batch mode, you can get results from individual jobs, which makes them more flexible to work with.  For example, if a job's results don't meet your expectations, you can cancel the remaining jobs. Also, if one job fails, you can re-submit it instead of re-running the entire workload.
+``` python
+from qiskit_ibm_runtime import QiskitRuntimeService, Batch, SamplerV2 as Sampler, EstimatorV2 as Estimator
 
-<Admonition type="note">
-    When batching, jobs are not guaranteed to run in the order they are submitted. Also, while your batch jobs will run as closely together as possible, they don't get exclusive access to the backend. Therefore, your batch jobs might run in parallel with other users' jobs if there is enough processing capacity on the QPU. Additionally, QPU calibration jobs could run between the batched jobs.
-</Admonition>
+service = QiskitRuntimeService()
+```
 
-![This diagram illustrates jobs submitted in a batch.  It shows five jobs, numbered 0 through 4, in a queue. The jobs are a mix of Estimator and Sampler.](/images/guides/batch.avif 'Figure 1: Batch execution')
 
 ## Open a batch
 
@@ -38,9 +34,9 @@ backend = service.least_busy(operational=True, simulator=False)
 batch = Batch(backend=backend)
 estimator = Estimator(mode=batch)
 sampler = Sampler(mode=batch)
+# Close the batch because no context manager was used.
 batch.close()
 ```
-
 
 **Context manager**
 
@@ -65,11 +61,15 @@ with Batch(backend=backend, max_time="25m"):
   ...
 ```
 
-There is also an interactive time to live (ITTL) value that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
+There is also an interactive time to live (interactive TTL) value that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
 
-To determine a batch's TTL or ITTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
+Default values:
 
-For more information about these settings, see [Batch maximum execution time.](/guides/max-execution-time#batch-max-time)
+| Instance type (Open or Premium Plan) | Interactive TTL | Maximum TTL |
+| --- | --- | --- |
+| Both Open and Premium Plan | 1 sec | 10 min |
+
+To determine a batch's max TTL or interactive TTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
 
 <span id="close"></span>
 ## Close a batch
@@ -105,6 +105,21 @@ print(f"Result2: {job2.result()}")
 batch.close()
 ```
 
+<span id="batch-details"></span>
+## Determine batch details
+
+For a comprehensive overview of a batch's configuration and status, including its interactive and max TTL, use the  `batch.details() method`.
+
+``` python
+from qiskit_ibm_runtime import QiskitRuntimeService, batch, SamplerV2 as Sampler
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
+with Batch(backend=backend) as batch:
+    print(batch.details())
+```
+
 <span id="partition"></span>
 ## Reconfigure jobs for parallel processing
 
@@ -127,33 +142,14 @@ There are multiple ways you can reconfigure your jobs to take advantage of the p
          jobs.append(job)
 ```
 
-
 <Admonition type="caution">
-    If you set `backend=backend` in a primitive, the program is run in job mode, even if it's inside a batch or session context. Setting `backend=backend` is deprecated as of IBM Qiskit Runtime 0.24.0.  Instead, use the `mode` parameter.
+    If you set `backend=backend` in a primitive, the program is run in job mode, even if it's inside a batch or session context. Setting `backend=backend` is deprecated as of Qiskit Runtime 0.24.0.  Instead, use the `mode` parameter.
 </Admonition>
 
-<span id="batch-details"></span>
-## Determine batch details
-
-For a comprehensive overview of a batch's configuration and status, including its interactive and max TTL, use the  `batch.details() method`.
-
-``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False)
-
-with Batch(backend=backend) as batch:
-    sampler = Sampler()
-    for partition in partitions:
-        job = sampler.run(partition)
-    print(batch.details())
-```
-
-
+## Next steps
 
 <Admonition type="tip" title="Recommendations">
-  - Try an example in the [Quantum approximate optimization algorithm (QAOA)](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) tutorial.
-  - Review the [Batch API](/api/qiskit-ibm-runtime/batch) reference.
-  - Understand the [Job limits](/guides/job-limits) when sending a job to an IBM&reg; QPU.
+  - Try an example in the [Combine error mitigation options with the estimator primitive](https://learning.quantum.ibm.com/tutorial/combine-error-mitigation-options-with-the-estimator-primitive) tutorial.
+  - Review the [Batch API](/api/qiskit-ibm-runtime/batch#batch) reference.
+  - Understand the [Job limits](/guides/job-limits) when sending a job to an IBM QPU.
 </Admonition>
