--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -6,14 +6,10 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 # Run jobs in a session
 
-There are several ways to set up and use [sessions](sessions).  It is recommended that you do not run a session with a single job in it.
+Use sessions when you need dedicated and exclusive access to the QPU.
 
 <Admonition type="note">
 Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
-</Admonition>
-
-<Admonition type="caution" title="Important">
-The way sessions are started within Qiskit Runtime has changed. **By 1 April 2024**, upgrade to `qiskit-ibm-runtime` version 0.20.0 or later. In addition, ensure you are using Qiskit version 0.45.0 or later. Starting 1 April, session calls made in earlier versions of these packages will fail.
 </Admonition>
 
 ## Set up to use sessions
@@ -45,6 +41,8 @@ backend = service.least_busy(operational=True, simulator=False)
 session = Session(backend=backend)
 estimator = Estimator(mode=session)
 sampler = Sampler(mode=session)
+# Close the session because no context manager was used.
+session.close()
 ```
 
 **Context manager**
@@ -72,14 +70,31 @@ with Session(backend=backend, max_time="25m"):
   ...
 ```
 
-There is also an interactive time to live (ITTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated.
+There is also an interactive time to live (interactive TTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated.
 
-To determine a session's max TTL or ITTL, follow the instructions in [Determine session details](#session-details) and look for the `max_time`or `interactive_timeout` value, respectively.
+Default values:
 
-For more information about these settings, see [Session maximum execution time.](/guides/max-execution-time#session-max-time)
+| Instance type (Open or Premium Plan) |  Interactive TTL | Maximum TTL |
+| --- | --- | --- |
+| Premium Plan | 60 sec* | 8 h* |
+| Open Plan | sessions run in job mode | sessions run in job mode |
+
+*\* Certain Premium Plan instances might be configured to have a different value.*
+
+To determine a session's max TTL or  interactive TTL, follow the instructions in [Determine session details](#session-details) and look for the `max_time`or `interactive_timeout` value, respectively.
+
+<span id="ends"></span>
+## End a session
+
+A session ends in the following circumstances:
+
+* The maximum timeout (TTL) value is reached, resulting in the cancellation of all queued jobs.
+* The session is manually canceled, resulting in the cancellation of all queued jobs.
+* The session is manually closed.  The session stops accepting new jobs but continues to run queued jobs with priority.
+* If you use Session as a context manager, that is,  `with Session()`, the session is automatically closed when the context ends (the same behavior as using `session.close()`).
 
 <span id="close"></span>
-## Close a session
+### Close a session
 
 A session automatically closes when it exits the context manager. When the session context manager is exited, the session is put into "In progress, not accepting new jobs" status. This means that the session finishes processing all running or queued jobs until the maximum timeout value is reached. After all jobs are completed, the session is immediately closed. This allows the scheduler to run the next job without waiting for the session interactive timeout, thereby reducing the average job queuing time. You cannot submit jobs to a closed session.
 
@@ -112,41 +127,56 @@ print(f"Result2: {job2.result()}")
 session.close()
 ```
 
-<span id="cancel"></span>
-## Cancel a session
+<span id="session-status"></span>
+## Check session status
 
-Canceling a session immediately closes it, failing all queued jobs and preventing new submission. Use the `session.cancel()` method to cancel a session.  Any jobs that are already running continue to run but queued jobs are put into a failed state and no further jobs can be submitted to the session. This is a convenient way to quickly fail all queued jobs within a session.
+You can query a session's status to understand its current state by using  `session.status()` or by viewing the Jobs page for your channel.
+
+Session status can be one of the following:
+
+- `Pending`: The session has not started or has been deactivated. The next session job needs to wait in the queue like other jobs.
+- `In progress, accepting new jobs`: The session is active and accepting new jobs.
+- `In progress, not accepting new jobs`: The session is active but not accepting new jobs. Job submission to the session is rejected, but outstanding session jobs will run to completion. The session is automatically closed once all jobs finish.
+- `Closed`: The session's maximum timeout value has been reached or the session was explicitly closed.
+
+<span id="session-details"></span>
+## Determine session details
+
+For a comprehensive overview of a session's configuration and status, use the  `session.details() method`.
 
 ``` python
+from qiskit_ibm_runtime import QiskitRuntimeService, Session, EstimatorV2 as Estimator
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
 with Session(backend=backend) as session:
-    estimator = Estimator()
-    job1 = estimator.run(...)
-    job2 = estimator.run(...)
-    # You can use session.cancel() to fail all pending jobs, for example,
-    # if you realize you made a mistake.
-    session.cancel()
+    print(session.details())
 ```
 
-<span id="mult-jobs-in-session"></span>
-## Invoke multiple primitives in a session
+## Usage patterns
 
-A session can handle multiple primitives, allowing for various operations within a single session.  The following example shows how you can create both an instance of the `SamplerV2` class and one of the `EstimatorV2` class, then invoke their `run()` methods within a session.
+Sessions are especially useful for algorithms that require frequent communication between classical and quantum resources.
+
+Example: Run an iterative workload that uses the classical SciPy optimizer to minimize a cost function. In this model, SciPy uses the output of the cost function to calculate its next input.
 
 ```python
-from qiskit_ibm_runtime import Session, SamplerV2 as Sampler, EstimatorV2 as Estimator
+def cost_func(params, ansatz, hamiltonian, estimator):
+    # Return estimate of energy from estimator
 
-with Session(backend=backend):
-    sampler = Sampler()
-    estimator = Estimator()
+    energy = estimator.run(ansatz, hamiltonian, parameter_values=params).result().values[0]
+    return energy
 
-    job = sampler.run([sampler_circuit])
-    result = job.result()
-    print(f" > Counts: {result[0].data.meas.get_counts()}")
+x0 = 2 * np.pi * np.random.random(num_params)
 
-    job = estimator.run([(circuit, observable)])
-    result = job.result()
-    print(f" > Expectation value: {result[0].data.evs}")
-    print(f" > Metadata: {result[0].metadata}")
+session = Session(backend=backend)
+
+# If using qiskit-ibm-runtime earlier than 0.24.0, change `mode=` to `session=`
+estimator = Estimator(mode=session, options={"shots": int(1e4)})
+res = minimize(cost_func, x0, args=(ansatz, hamiltonian, estimator), method="cobyla")
+
+# Close the session because no context manager was used.
+session.close()
 ```
 
 <span id="two-vqe"></span>
@@ -176,35 +206,6 @@ with Session(backend=backend), ThreadPoolExecutor() as executor:
     # Get workload results.
     cobyla_result = cobyla_future.result()
     nelder_mead_result = nelder_mead_future.result()
-```
-
-<span id="session-status"></span>
-## Check session status
-
-You can query a session's status to understand its current state by using  `session.status()` or on the Jobs page for your channel.
-
-Session status can be one of the following:
-
-- `Pending`: The session has not started or has been deactivated. The next session job needs to wait in the queue like other jobs.
-- `In progress, accepting new jobs`: The session is active and accepting new jobs.
-- `In progress, not accepting new jobs`: The session is active but not accepting new jobs. Job submission to the session is rejected, but outstanding session jobs will run to completion. The session is automatically closed once all jobs finish.
-- `Closed`: The session's maximum timeout value has been reached or the session was explicitly closed.
-
-<span id="session-details"></span>
-## Determine session details
-
-For a comprehensive overview of a session's configuration and status, use the  `session.details() method`.
-
-``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, Session, EstimatorV2 as Estimator
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False)
-
-with Session(backend=backend) as session:
-    estimator = Estimator()
-    job = estimator.run([(circuit, observable)])
-    print(session.details())
 ```
 
 ## Next steps
