Add new pill and (hopefully) final edits to pages

--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "The following workflow reduces a circuit's depth by cutting distant gates, avoiding a large series of swap gates that would otherwise be introduced.\n",
     "\n",
-    "Start with the [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) ansatz, but with \"circular\" entanglement in order to introduce distant gates. Here you will define the same observable to measure as the previous example."
+    "Start with the [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) ansatz, with \"circular\" entanglement to introduce distant gates."
    ]
   },
   {
@@ -119,13 +119,13 @@
    "id": "e9871e55-59f8-48e2-a9ca-2645dcb7d2bf",
    "metadata": {},
    "source": [
-    "Now that the cut gate instructions have been added, the subexperiments will have a smaller depth after transpilation than the original circuit. The code snippet below generates the subexperiments using the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method as before, but for this example, use the `qpd_circuit` instead of dictionaries since you did not partition the problem.\n",
+    "Now that the cut gate instructions have been added, the subexperiments will have a smaller depth after transpilation than the original circuit. The code snippet below generates the subexperiments using the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) which ingests the circuit and observable to reconstruct.\n",
     "\n",
     "<Admonition type=\"note\" title=\"Note about the number of samples\">\n",
     "    The `num_samples` argument specifies how many samples to draw from the quasi-probability distribution and determines the accuracy of the coefficients used for the reconstruction. Passing infinity (`np.inf`) will ensure all coefficients are calculated exactly. Read the API docs on [generating weights](/api/qiskit-addon-cutting/qpd#generate_qpd_weights) and [generating cutting experiments](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) for more information.\n",
     "</Admonition>\n",
     "\n",
-    "Once the subexperiments are generated, you can then transpile them, then use the `Sampler` primitive to sample the distribution and reconstruct the estimated expectation values. The following code block generates, transpiles, and executes the subexperiments. It then reconstructs the results and compares them to the exact expectation value."
+    "Once the subexperiments are generated, you can then transpile them and use the `Sampler` primitive to sample the distribution and reconstruct the estimated expectation values. The following code block generates, transpiles, and executes the subexperiments. It then reconstructs the results and compares them to the exact expectation value."
    ]
   },
   {
@@ -138,10 +138,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconstructed expectation value: 0.62280273\n",
+      "Reconstructed expectation value: 0.50952148\n",
       "Exact expectation value: 0.50497603\n",
-      "Error in estimation: 0.1178267\n",
-      "Relative error in estimation: 0.23333128\n"
+      "Error in estimation: 0.00454545\n",
+      "Relative error in estimation: 0.00900132\n"
      ]
     }
    ],
@@ -198,9 +198,9 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"caution\" title=\"Note about observable coefficients\">\n",
-    "    To accurately reconstruct the expectation value, the coefficients of the original observable (which are different from the output of `generate_cutting_experiments()`) must be applied to the output of the reconstruction since this information was lost when the cutting experiments were generated or when the observable was expanded.\n",
+    "    To accurately reconstruct the expectation value, the coefficients of the original observable (which are different from the coefficients in the output of `generate_cutting_experiments()`) must be applied to the output of the reconstruction since this information was lost when the cutting experiments were generated or when the observable was expanded.\n",
     "\n",
-    "    Typically these coefficients can be applied through `numpy.dot()` as shown previously.\n",
+    "    Typically these coefficients can be applied through `numpy.dot()` as shown above.\n",
     "</Admonition>"
    ]
   },
@@ -211,11 +211,7 @@
    "source": [
     "## Gate cutting to reduce circuit width\n",
     "\n",
-    "First, partition the circuit and observable into *subcircuits* and *subobservables* using the [`partition_problem`](/api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) method. This function ingests a partitioning scheme according to a label string of the form `\"AABB\"` where each label in this string corresponds to the `circuit` qubit in the same index. Qubits sharing a common partition label are grouped together, and any non-local gates that span more than one partition will be cut.\n",
-    "\n",
-    "<Admonition type=\"information\" title=\"Note\">\n",
-    "   The `observables` kwarg to `partition_problem` is of type [`PauliList`](/api/qiskit/qiskit.quantum_info.PauliList). Observable term coefficients and phases are ignored during decomposition of the problem and execution of the subexperiments. They may be re-applied during reconstruction of the expectation value.\n",
-    "</Admonition>"
+    "Next we'll focus on using gate cutting to reduce circuit width. Start with the same [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) but use \"linear\" entanglement."
    ]
   },
   {
@@ -253,6 +249,20 @@
     "print(f\"Observable: {observable}\")\n",
     "\n",
     "qc.draw(\"mpl\", scale=0.8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ddc1d5-b0c6-45e9-88e1-6df2616e3f96",
+   "metadata": {},
+   "source": [
+    "Then generate the *subcircuits* and *subobservables* you'll execute using the [`partition_problem()`](/api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) function. This function takes in the circuit, observable, and an optional partitioning scheme and returns the cut circuits and observables in the form of a dictionary.\n",
+    "\n",
+    "The partitioning is defined by a label string of the form `\"AABB\"` where each label in this string corresponds to the qubit in the same index of the `circuit` argument. Qubits sharing a common partition label are grouped together, and any non-local gates that span more than one partition will be cut.\n",
+    "\n",
+    "<Admonition type=\"information\" title=\"Note\">\n",
+    "   The `observables` kwarg to `partition_problem` is of type [`PauliList`](/api/qiskit/qiskit.quantum_info.PauliList). Observable term coefficients and phases are ignored during decomposition of the problem and execution of the subexperiments. They may be re-applied during reconstruction of the expectation value.\n",
+    "</Admonition>"
    ]
   },
   {
@@ -322,7 +332,7 @@
    "id": "8a03df45-252b-424f-9fe0-9748084f14c3",
    "metadata": {},
    "source": [
-    "The next step is then to generate the *subexperiments* to be executed on a QPU. This is done through the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method, which accepts circuit and observable arguments as dictionaries mapping the qubit partition label to the respective *subcircuit* and *subobservable*.\n",
+    "The next step is then to use the subcircuits and subobservables to generate the *subexperiments* to be executed on a QPU using the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method.\n",
     "\n",
     "To estimate the expectation value of the full-sized circuit, many subexperiments are generated from the decomposed gates' joint quasi-probability distribution and then executed on one or more QPUs. The number of samples to be taken from this distribution is controlled by the `num_samples` argument.\n",
     "\n",
@@ -368,7 +378,7 @@
    "id": "64e762ad-0660-4c78-8ea7-fb9d226357d7",
    "metadata": {},
    "source": [
-    "Lastly, the expectation value of the full circuit can be reconstructed using the [`reconstruct_expectation_values`](/api/qiskit-addon-cutting/qiskit-addon-cutting#reconstruct_expectation_values) method.\n",
+    "Lastly, the expectation value of the full circuit is reconstructed using the [`reconstruct_expectation_values`](/api/qiskit-addon-cutting/qiskit-addon-cutting#reconstruct_expectation_values) method.\n",
     "\n",
     "The code block below reconstructs the results and compares them with the exact expectation value."
    ]
@@ -383,10 +393,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconstructed expectation value: 0.59819555\n",
+      "Reconstructed expectation value: 0.43819708\n",
       "Exact expectation value: 0.56254612\n",
-      "Error in estimation: 0.03564943\n",
-      "Relative error in estimation: 0.06337157\n"
+      "Error in estimation: -0.12434905\n",
+      "Relative error in estimation: -0.22104685\n"
      ]
     }
    ],
