--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "## Gate cutting to reduce circuit width\n",
     "\n",
-    "Next we'll focus on using gate cutting to reduce circuit width. Start with the same [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) but use \"linear\" entanglement."
+    "This section demonstrates using gate cutting to reduce circuit width. Start with the same [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) but use \"linear\" entanglement."
    ]
   },
   {
