--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -363,6 +363,8 @@
    "source": [
     "### List previously run jobs run with Qiskit Functions\n",
     "\n",
+    "PLACEHOLDER: need to add catalog.get_job_by_id()\n",
+    "\n",
     "You can use `jobs()` to list all jobs submitted to Qiskit Functions:"
    ]
   },
