--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -41,10 +41,10 @@ The output of this step in a Qiskit pattern is normally a collection of circuits
 * [Specifying observables in the Pauli basis](./specify-observables-pauli)
 * [The Operator class](./operator-class)
 
-### Other circuit building tools
+### Other circuit-building tools
 * [Pulse schedules](./pulse)
 * OpenQASM
-  * [Intro to OpenQASM](./introduction-to-qasm)
+  * [introduction to OpenQASM](./introduction-to-qasm)
   * [OpenQASM 2 and the Qiskit SDK](./interoperate-qiskit-qasm2)
   * [OpenQASM 3 and the Qiskit SDK](./interoperate-qiskit-qasm3)
   * [OpenQASM 3 feature table](./qasm-feature-table)
