--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -55,22 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "c5118119-5892-4ad9-9908-107795a1f1fa",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'qiskit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QuantumCircuit\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtranspiler\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CouplingMap\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtranspiler\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreset_passmanagers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generate_preset_pass_manager\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'qiskit'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.transpiler import CouplingMap\n",
@@ -120,19 +108,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "33d8cc11-6c6f-4838-8038-dd9994476db4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'noise_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNoise learner result contains \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[43mnoise_model\u001b[49m\u001b[38;5;241m.\u001b[39mdata)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m entries\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m and has the following type:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(noise_model)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m )\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEach element of `NoiseLearnerResult` then contains\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m an object of type:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(noise_model\u001b[38;5;241m.\u001b[39mdata[\u001b[38;5;241m0\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m )\n\u001b[0;32m      9\u001b[0m datum \u001b[38;5;241m=\u001b[39m noise_model\u001b[38;5;241m.\u001b[39mdata[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'noise_model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noise learner result contains 2 entries and has the following type:\n",
+      " <class 'qiskit_ibm_runtime.utils.noise_learner_result.NoiseLearnerResult'>\n",
+      "\n",
+      "Each element of `NoiseLearnerResult` then contains an object of type:\n",
+      " <class 'qiskit_ibm_runtime.utils.noise_learner_result.LayerError'>\n",
+      "\n",
+      "And each of these `LayerError` objects possess the following data: \n",
+      "PauliLindbladError(generators=['IIIIIIIIIIIIIIIIIIIIIIIIIIX', 'IIIIIIIIIIIIIIIIIIIIIIIIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIIZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIXI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIXX', 'IIIIIIIIIIIIIIIIIIIIIIIIIXY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIXZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIYX', 'IIIIIIIIIIIIIIIIIIIIIIIIIYY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIYZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIZI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIZX', 'IIIIIIIIIIIIIIIIIIIIIIIIIZY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIZZ', 'IIIIIIIIIIIIIIIIIIIIIIIIXII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIXXI', 'IIIIIIIIIIIIIIIIIIIIIIIIXYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIXZI', 'IIIIIIIIIIIIIIIIIIIIIIIIYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIYXI', 'IIIIIIIIIIIIIIIIIIIIIIIIYYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIYZI', 'IIIIIIIIIIIIIIIIIIIIIIIIZII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIZXI', 'IIIIIIIIIIIIIIIIIIIIIIIIZYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIZZI', 'IIIIIIIIIIIIIIIIIIIIIIIXIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIXXII', 'IIIIIIIIIIIIIIIIIIIIIIIXYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIXZII', 'IIIIIIIIIIIIIIIIIIIIIIIYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIYXII', 'IIIIIIIIIIIIIIIIIIIIIIIYYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIYZII', 'IIIIIIIIIIIIIIIIIIIIIIIZIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIZXII', 'IIIIIIIIIIIIIIIIIIIIIIIZYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIZZII', 'IIIIIIIIIIIIIIIIIIIIIIXIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIXIIIX', 'IIIIIIIIIIIIIIIIIIIIIIXIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIXIIIZ', 'IIIIIIIIIIIIIIIIIIIIIIYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIYIIIX', 'IIIIIIIIIIIIIIIIIIIIIIYIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIYIIIZ', 'IIIIIIIIIIIIIIIIIIIIIIZIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIZIIIX', 'IIIIIIIIIIIIIIIIIIIIIIZIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIZIIIZ', 'IIIIIIIIIIIIIIIIIIIIIXIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXXIIII', 'IIIIIIIIIIIIIIIIIIIIIXYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXZIIII', 'IIIIIIIIIIIIIIIIIIIIIYIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYXIIII', 'IIIIIIIIIIIIIIIIIIIIIYYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYZIIII', 'IIIIIIIIIIIIIIIIIIIIIZIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZXIIII', 'IIIIIIIIIIIIIIIIIIIIIZYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZZIIII', 'IIIIIIIIIIIIIIIIIIIIXIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIXXIIIII', 'IIIIIIIIIIIIIIIIIIIIXYIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIXZIIIII', 'IIIIIIIIIIIIIIIIIIIIYIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYXIIIII', 'IIIIIIIIIIIIIIIIIIIIYYIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYZIIIII', 'IIIIIIIIIIIIIIIIIIIIZIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIZXIIIII', 'IIIIIIIIIIIIIIIIIIIIZYIIIII', ...], rates=[0.00046, 0.0003, 0.00082, 0.00288, 0.00043, 0.00058, 0.0, 0.00039, 6e-05, 0.0, 0.0009, 0.00035, 0.0, 6e-05, 0.00094, 0.00011, 6e-05, 0.00029, 0.00025, 0.0, 6e-05, 0.00024, 0.00029, 0.00069, 0.0, 1e-05, 1e-05, 0.00106, 0.00059, 0.00071, 0.00014, 0.00114, 0.00021, 0.0, 0.00083, 0.00083, 0.00019, 0.0, 0.00114, 0.00028, 0.0, 0.00012, 1e-05, 0.00036, 0.00012, 0.0, 1e-05, 0.00133, 0.0, 0.0, 0.00183, 0.00056, 0.00053, 0.00046, 0.0001, 0.0002, 0.0, 1e-05, 0.00045, 0.00015, 0.0, 0.0, 0.00051, 0.0012, 0.0, 6e-05, 7e-05, 0.00085, 5e-05, 0.00026, 0.00022, 0.0, 0.0, 0.0, 0.0, 0.0, 0.00029, 0.0, 0.0, 0.0, 0.00013, 3e-05, 0.0, 0.00299, 0.0, 0.0, 0.00115, 0.00023, 0.0, 0.0, 0.0, 0.00112, 0.0, 0.0, 0.0, 0.00069, 0.00024, 0.00039, 0.00725, 0.0, 0.00112, 0.00023, 0.00033, 0.00017, 0.00014, 0.00038, 0.00121, 0.00047, 0.0001, 0.0, 0.00091, 0.00126, 0.00016, 0.00028, 0.00026, 0.00237, 0.00016, 0.00026, 0.00028, 0.00153, 0.0, 0.00015, 0.00015, 0.00079, 0.00307, 0.00196, 0.00013, 0.0002, 6e-05, 0.0, 0.00033, 0.00025, 0.0, 0.00026, 0.00028, 0.00052, 0.00017, 7e-05, 0.0, 0.00035, 0.00017, 0.0, 7e-05, 0.00041, 0.0, 1e-05, 1e-05, 0.0008, 0.00059, 0.00076, 0.00028, 0.0001, 0.0, 7e-05, 0.00033, 0.00021, 0.0, 8e-05, 0.00022, 0.00037, 0.0, 6e-05, 4e-05, 0.00024, 0.0, 4e-05, 6e-05, 0.00068, 0.0, 2e-05, 2e-05, 0.0005, 0.00034, 0.00047, 0.00032, 0.00179, 0.00012, 0.0, 0.00208, 0.0014, 0.0, 0.00019, 0.00247, 0.00019, 0.00017, 0.0003, 0.0003, 5e-05, 0.00017, 0.0003, 0.0003, 0.00021, 0.0003, 8e-05, 8e-05, 0.00125, 0.00082, 0.00096, 0.00023, 0.00062, 0.0, 0.0, 0.00097, 0.00066, 0.00022, 5e-05, 0.00093, 0.00386, 0.0, 0.0, 0.00031, 0.00146, 0.0, 0.00031, 0.0, 0.00216, 8e-05, 0.0, 0.0, 0.00067, 0.00177, 0.00417, 0.00046, 0.00047, 0.0, 0.00039, 0.0004, 0.0004, 0.0008, 0.00042, 0.00047, 0.00015, 0.0, 0.0, 0.0, 0.00037, 0.0, 0.0, 0.0, 0.00265, 0.0, 0.0, 0.0, 0.00132, 0.00037, 0.00015, 0.00019, 0.0058, 0.00015, 0.00021, 0.0041, 0.0041, 0.0, 0.00032, 0.0058, 0.0008, 0.0, 0.0, 0.0, 0.001, 0.0, 0.0, 0.0, 0.00196, 0.0, 0.0, 0.0, 0.00096, 0.001, 0.0008, 0.00071, 0.00021, 4e-05, 3e-05, 0.00107, 0.00045, 0.0, 0.0, 0.00084, 0.00067, 0.0001, 0.00017, 4e-05, 0.00084, 0.0001, 4e-05, 0.00017, 0.00059, 0.00039, 0.00042, 0.00042, 0.00048, 0.00114, 0.00097, 0.00024, 0.00026, 0.0, 4e-05, 0.00046, 0.00035, 0.00014, 0.0, 0.00037, 0.00074, 6e-05, 0.0, 0.0, 0.0005, 2e-05, 8e-05, 8e-05, 0.00268, 0.00015, 3e-05, 3e-05])\n",
+      "\n"
      ]
     }
    ],
@@ -145,14 +173,10 @@
     "    f\"Each element of `NoiseLearnerResult` then contains\"\n",
     "    f\" an object of type:\\n {type(noise_model.data[0])}\\n\"\n",
     ")\n",
-    "datum = noise_model.data[0]\n",
     "print(\n",
-    "    f\"And each of these `LayerError` objects possess\"\n",
-    "    f\" data on the generators for the error channel: \\n{datum.generators}\\n\"\n",
-    ")\n",
-    "print(\n",
-    "    f\"and the error rates: \\n{datum.rates}\\n\"\n",
-    ")\n"
+    "    f\"And each of these `LayerError` objects possess the\"\n",
+    "    f\" following data: \\n{noise_model.data[0].error}\\n\"\n",
+    ")"
    ]
   },
   {
@@ -181,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8f35d68a-b459-4f1c-ae44-a01bbe700ed0",
    "metadata": {},
    "outputs": [],
@@ -221,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d8b504c1-17ad-4e23-b508-eac1955bd1d6",
    "metadata": {},
    "outputs": [],
@@ -233,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8aa753bc-915d-4d47-ba56-5179ec9cf4ca",
    "metadata": {},
    "outputs": [],
@@ -246,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6dcb70fe-e291-4b5a-a79b-14cace921905",
    "metadata": {},
    "outputs": [],
