--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -56,7 +56,7 @@
     "**Accepted problem formats:**\n",
     "- Polynomial expression representation of an objective function. Ideally created in Python with an existing SymPy Poly object and formatted into a string using [sympy.srepr](https://docs.sympy.org/latest/tutorials/intro-tutorial/printing.html#srepr).\n",
     "- Graph representation of a specific problem type. The graph should be created using the networkx library in Python. It should then converted to a string by using the networkx function `[nx.readwrite.json_graph.adjacency_data](http://nx.readwrite.json_graph.adjacency_data.)`.\n",
-    "- Spin chain representation of a specific problem. The spin chain should be represented by a `SparsePauliOp` object. This spin chain can be passed as a `SparsePauliOp` object, feel free to read the [documentation](https://docs.quantum.ibm.com/api/qiskit/qiskit.quantum_info.SparsePauliOp).\n",
+    "- Spin chain representation of a specific problem. The spin chain should be represented by a `SparsePauliOp` object. This spin chain can be passed as a `SparsePauliOp` object; see the [documentation](/api/qiskit/qiskit.quantum_info.SparsePauliOp) for more details.\n",
     "\n",
     "**Supported backends:**\n",
     "The following list of backends are currently supported. If your device is not listed, [reach out to Q-CTRL](https://form.typeform.com/to/iuujEAEI?typeform-source=q-ctrl.com) to add support.\n",
