--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -46,7 +46,7 @@
    "id": "95b2f280-f685-455f-83e9-b172445d7c6a",
    "metadata": {},
    "source": [
-    "Qiskit Serverless allows you to manage compute and data across your [Qiskit pattern](./introduction-to-patterns), including CPUs, QPUs, and other compute accelerators.\n",
+    "Qiskit Serverless allows you to manage compute and data across your [Qiskit pattern](./intro-to-patterns), including CPUs, QPUs, and other compute accelerators.\n",
     "\n",
     "## Parallel workflows"
    ]
