--- a/docs/guides/addons.mdx
+++ b/docs/guides/addons.mdx
@@ -7,7 +7,7 @@ description: Understand the Qiskit addon tools, which help you build utility-gra
 
 Qiskit addons are a collection of research capabilities for enabling algorithm discovery at the utility scale. These capabilities build on Qiskit's performant foundation of tools for creating and running quantum algorithms. They are provided as modular software components that can plug into a [workflow](/guides/introduction-to-patterns) to scale or design new quantum algorithms.
 
-## addons for mapping
+## Addons for mapping
 
 ### Approximate quantum compilation with tensor networks
 
