resolve merge conflicts

--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -44,7 +44,7 @@ The output of this step in a Qiskit pattern is normally a collection of circuits
 ### Other circuit-building tools
 * [Pulse schedules](./pulse)
 * OpenQASM
-  * [introduction to OpenQASM](./introduction-to-qasm)
+  * [Introduction to OpenQASM](./Introduction-to-qasm)
   * [OpenQASM 2 and the Qiskit SDK](./interoperate-qiskit-qasm2)
   * [OpenQASM 3 and the Qiskit SDK](./interoperate-qiskit-qasm3)
   * [OpenQASM 3 feature table](./qasm-feature-table)
