--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   assert job_by_id.job_id == latest_job.job_id
+   "assert job_by_id.job_id == latest_job.job_id"
    ]
   },
   {
