--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -414,7 +414,8 @@
    "source": [
     "# Get the job_id for the job at index position 1\n",
     "jobid = old_jobs[1].job_id\n",
-    "job_by_id = catalog.get_job_by_id(jobid)"
+    "job_by_id = catalog.get_job_by_id(jobid)\n",
+    "assert job_by_id.job_id == old_jobs.job_id"
    ]
   },
   {
@@ -424,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   "assert job_by_id.job_id == old_jobs.job_id"
+    "# Print the job_id for the job at index position 1"
    ]
   },
   {
