--- a/docs/guides/kipu-optimization.ipynb
+++ b/docs/guides/kipu-optimization.ipynb
@@ -702,7 +702,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Optimization - A Qiskit Function by Kipu Quantum"
+  "title": "Iskay Quantum Optimizer - A Qiskit Function by Kipu Quantum"
  },
  "nbformat": 4,
  "nbformat_minor": 5
