Update run outputs

--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -138,10 +138,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconstructed expectation value: 0.50952148\n",
+      "Reconstructed expectation value: 0.5279541\n",
       "Exact expectation value: 0.50497603\n",
-      "Error in estimation: 0.00454545\n",
-      "Relative error in estimation: 0.00900132\n"
+      "Error in estimation: 0.02297807\n",
+      "Relative error in estimation: 0.04550329\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
     "\n",
     "# Set up the Qiskit Runtime Sampler primitive, submit the subexperiments, and retrieve the results\n",
     "sampler = SamplerV2(backend)\n",
-    "job = sampler.run(isa_subexperiments)\n",
+    "job = sampler.run(isa_subexperiments, shots=4096 * 2)\n",
     "results = job.result()\n",
     "\n",
     "\n",
@@ -365,7 +365,7 @@
     "with Batch(backend=backend) as batch:\n",
     "    sampler = SamplerV2(mode=batch)\n",
     "    jobs = {\n",
-    "        label: sampler.run(subsystem_subexpts, shots=2**12)\n",
+    "        label: sampler.run(subsystem_subexpts, shots=4096 * 2)\n",
     "        for label, subsystem_subexpts in isa_subexperiments.items()\n",
     "    }\n",
     "\n",
@@ -393,10 +393,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconstructed expectation value: 0.43819708\n",
+      "Reconstructed expectation value: 0.50190303\n",
       "Exact expectation value: 0.56254612\n",
-      "Error in estimation: -0.12434905\n",
-      "Relative error in estimation: -0.22104685\n"
+      "Error in estimation: -0.0606431\n",
+      "Relative error in estimation: -0.10780111\n"
      ]
     }
    ],
