fix broken links

--- a/docs/api/qiskit/release-notes/1.4.mdx
+++ b/docs/api/qiskit/release-notes/1.4.mdx
@@ -20,7 +20,7 @@ in_page_toc_max_heading_level: 3
 
 ### Prelude
 
-The Qiskit v1.4.0 release is the final minor version release for the v1.x series. This release contains minimal features, and primarily adds new deprecation warnings for API changes coming in the future major version release v2.0.0. It is fully compatible with the Qiskit v1.3.x releases. It is strongly recommended that you upgrade from v1.3.x to v1.4.0 so that you’re able to see the warnings about which interfaces will change with Qiskit 2.0.0. The v1.4.x release series will continue to be supported and receive bugfixes for 6 months and security fixes for 1 year after this release. The fixes will take place via patch releases. For more details on the release schedule and support cycle see: [start/install#qiskit-versioning](/start/install#qiskit-versioning) which documents the release schedule in more detail.
+The Qiskit v1.4.0 release is the final minor version release for the v1.x series. This release contains minimal features, and primarily adds new deprecation warnings for API changes coming in the future major version release v2.0.0. It is fully compatible with the Qiskit v1.3.x releases. It is strongly recommended that you upgrade from v1.3.x to v1.4.0 so that you’re able to see the warnings about which interfaces will change with Qiskit 2.0.0. The v1.4.x release series will continue to be supported and receive bugfixes for 6 months and security fixes for 1 year after this release. The fixes will take place via patch releases. For more details on the release schedule and support cycle see: [open-source/qiskit-sdk-version-strategy#qiskit-sdk-version-strategy](/open-source/qiskit-sdk-version-strategy#qiskit-sdk-version-strategy) which documents the release schedule in more detail.
 
 <span id="relnotes-1-4-0-circuits-features" />
 
