--- a/docs/guides/common-parameters.ipynb
+++ b/docs/guides/common-parameters.ipynb
@@ -45,7 +45,7 @@
    "id": "05fb8adb-3b36-4449-b669-108d2d749ca5",
    "metadata": {},
    "source": [
-    "This page describes some of the more commonly used parameters for local transpilation. These parameters are configured using arguments to [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#generate_preset_pass_manager) or [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile).\n",
+    "This page describes some of the more commonly used parameters for local transpilation. These parameters are configured using arguments to [`generate_preset_pass_manager`](/api/qiskit/qiskit.transpiler.generate_preset_pass_manager#qiskit.transpiler.generate_preset_pass_manager) or [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile).\n",
     "\n",
     "<span id=\"approx-degree\"></span>\n",
     "## Approximation degree\n",
