Manually fix issues

--- a/docs/guides/estimate-job-run-time.mdx
+++ b/docs/guides/estimate-job-run-time.mdx
@@ -27,13 +27,13 @@ Usage is a measurement of the amount of time the QPU is locked for your workload
 The usage reported on the dashboard or by using the API is the time a QPU is locked for your workload. Failed or canceled jobs count toward your usage in certain circumstances - see the [Failed and canceled jobs](#failed-job) section for details.
 
 <CloudContent>
-For Standard Plan users, usage determines how much the workload costs. See [Manage cost](/guides/manage-cost#manage-cost) for details.
+For Standard Plan users, usage determines how much the workload costs. See [Manage cost](/guides/manage-cost) for details.
 </CloudContent>
 
 <LegacyContent>
 Your usage has different impacts, depending on which channel you're using:
 
-- For Qiskit Runtime on IBM Cloud&reg; users, the usage determines how much the job costs.  See [Manage cost](/guides/manage-cost#manage-cost) for details.
+- For Qiskit Runtime on IBM Cloud&reg; users, the usage determines how much the job costs.  See [Manage cost](/guides/manage-cost) for details.
 - For IBM Quantum&reg; Platform users, this translates to shares. The [fair-share scheduler](/guides/fair-share-scheduler) prioritizes instances with the most shares left. Thus, the higher your usage, the longer your next job stays in the queue.
 </LegacyContent>
 
