--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -82,7 +82,7 @@
     "Follow the [Install and set up](./install-qiskit) instructions if you haven't already, including the steps to [Set up to use IBM Quantum&reg; Platform](setup-channel#set-up-to-use-ibm-quantum-platform).\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "Follow the [Install and set up](./install-qiskit) instructions if you haven't already, including the steps to [Set up to use IBM Cloud&reg;.](guides/cloud-setup)\n",
+    "Follow the [Install and set up](./install-qiskit) instructions if you haven't already, including the steps to [Set up to use IBM Cloud&reg;.](/guides/cloud-setup)\n",
     "</CloudContent>\n",
     "\n",
     "It is recommended that you use the [Jupyter](https://jupyter.org/install) development environment to interact with quantum computers. Be sure to install the recommended extra visualization support (`'qiskit[visualization]'`). You'll also need the `matplotlib` package for the second part of this example.\n",
