--- a/docs/guides/upgrade-from-open.mdx
+++ b/docs/guides/upgrade-from-open.mdx
@@ -65,7 +65,7 @@ If the instance usage reaches this limit, any running jobs are canceled and the 
 
 ## Manage users and access
 
-Skip this step if you are an individual user setting up Qiskit Runtime for your own use. In these instructions, the owner of this account also administrates the Qiskit Runtime instances that the rest of the company's users will use. In more complex configurations, there could be more roles and many different ways to manage the users, as explained in [Plan Qiskit Runtime for an organization](./admin/quickstart-org).
+Skip this step if you are an individual user setting up Qiskit Runtime for your own use. In these instructions, the owner of this account also administrates the Qiskit Runtime instances that the rest of the company's users will use. In more complex configurations, there could be more roles and many different ways to manage the users, as explained in [Plan Qiskit Runtime for an organization](/administration/quickstart-org).
 
 As the account owner or administrator, you add the people in your organization to the IBM Cloud account and then assign them access permissions to use the Qiskit Runtime instance created in [step 3](#create-qr-account).
 
