--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -33,7 +33,7 @@ You can see the instances you have access to on the dashboard or by clicking the
 
 ## Available plans
 
-The following plans are available to non-Premuim users:
+The following plans are available to non-Premium users:
 
 * **Open** - Free plan with 10 minutes of access to quantum computers per 28-day period.
 * **Standard** - Pay only for your actual [usage](../guides/estimate-job-run-time).
@@ -53,7 +53,7 @@ Follow these steps to start using the new version of IBM Quantum Platform.
 
 1. If you don't already have one, [register for an IBM Cloud account.](https://cloud.ibm.com/registration?cm_sp=quantum&utm_content=quantum-next&target=https%3A%2F%2Fquantum.cloud.ibm.com&error_uri=)  If you already have an IBM Quantum Platform account, use the same email for this account.
 2. Create an instance.
-   1. Log on to the new [IBM Quantum Platform.](quantum.cloud.ibm.com) Choose **IBMid** and enter your IBM Cloud account information. The dashboard opens.
+   1. Log on to the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com) Choose **IBMid** and enter your IBM Cloud account information. The dashboard opens.
    1. If you do not already have an instance, Click **Create instance** on the dashboard page.
       <Admonition type="note">
       If you have already created an instance, go to your account [administration page](https://quantum.cloud.ibm.com/admin/instances) to create new ones.
