--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -4,6 +4,8 @@ description: Installation and setup instructions for IBM Quantum on IBM Cloud to
 platform: cloud
 ---
 
+{/* cspell:ignore WQVY */}
+
 # Set up your IBM Cloud account
 <Admonition type="note">
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/setup-channel)
