--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -58,6 +58,7 @@ expectation values of observables corresponding to physical quantities or cost f
 ### QPU and platform information
 * [Processor types](./processor-types)
 * [QPU information](./qpu-information)
+* [Calibration jobs](./calibration-jobs)
 * [Get QPU information with Qiskit](./get-qpu-information)
 * [Native gates and operations](./native-gates)
 * [Fixed and dynamic repetition rate execution](./repetition-rate-execution)
@@ -66,3 +67,4 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Instances](./instances)
 * [Fair-share scheduler](./fair-share-scheduler)
 * [Manage cost](./manage-cost)
+* [View cost](./view-cost)
