--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -5,7 +5,18 @@
    "id": "b3e994de-6477-421d-8a9a-6b20d45260ae",
    "metadata": {},
    "source": [
-    "# Build a function template for Hamiltonian simulation"
+    "# Build a function template for Hamiltonian simulation\n",
+    "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/function-template-hamiltonian-simulation)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/function-template-hamiltonian-simulation)\n",
+    "</Admonition>\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -588,12 +599,20 @@
    "metadata": {},
    "source": [
     "## Deploy to IBM Quantum Platform\n",
-    "\n",
+    "<LegacyContent>\n",
     "The previous section created a program to be run remotely. The code in this section uploads that program to Qiskit Serverless.\n",
     "\n",
-    "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum&trade; account](https://quantum.ibm.com/account), and upload the program.\n",
+    "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum&reg; account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
-    "You can optionally use `save_account()` to save your credentials (see the [\"Authenticate to the service\" step](/guides/setup-channel#save-account)) in the Set up to use IBM Quantum Platform guide. Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)"
+    "You can optionally use `save_account()` to save your credentials (see the [\"Authenticate to the service\" step](/guides/setup-channel#save-account)) in the Set up to use IBM Quantum Platform guide. Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "The previous section created a program to be run remotely. The code in this section uploads that program to Qiskit Serverless.\n",
+    "\n",
+    "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find on the [IBM Quantum Platform](https://quantum.cloud.ibm.com) dashboard, and upload the program.\n",
+    "\n",
+    "You can optionally use `save_account()` to save your credentials (see the [Set up your IBM Cloud account](/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)\n",
+    "</CloudContent>"
    ]
   },
   {
