--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -16,7 +16,7 @@
     "# Tensor-network error mitigation (TEM): A Qiskit Function by Algorithmiq\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "## Overview\n",
@@ -109,7 +109,12 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the TEM function as follows:"
+    "<LegacyContent>\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.ibm.com/), and select the TEM function as follows:\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the TEM function as follows:\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -125,7 +130,7 @@
     "\n",
     "# If you have not previously saved your credentials, follow instructions at\n",
     "# https://docs.quantum.ibm.com/guides/functions\n",
-    "# to authenticate with your API token.\n",
+    "# to authenticate with your API key.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# Load your function\n",
@@ -175,7 +180,6 @@
     "service = QiskitRuntimeService()\n",
     "backend_name = service.least_busy(operational=True).name\n",
     "\n",
-    "# Instance is a string of the form \"<IQP_HUB/IQP_GROUP/IQP_PROJECT>\".\n",
     "# The following line gets the instance of the active QiskitRuntimeService account.\n",
     "instance = service.active_account()[\"instance\"]\n",
     "\n",
@@ -250,6 +254,7 @@
     "## Inputs\n",
     "\n",
     "**Parameters**\n",
+    "<LegacyContent>\n",
     "Name | Type | Description | Required | Default | Example\n",
     "-- | -- | -- | -- | -- | --\n",
     "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/guides/primitive-input-output#overview-of-pubs) for more information. The circuits don't need to be ISA circuits. | Yes | N/A | (circuit, observables)\n",
@@ -257,6 +262,15 @@
     "`instance` | str | The hub/group/project to use in that format. | Yes | N/A |\"hub1/group1/project1\"\n",
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
     "\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "Name | Type | Description | Required | Default | Example\n",
+    "-- | -- | -- | -- | -- | --\n",
+    "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/guides/primitive-input-output#overview-of-pubs) for more information. The circuits don't need to be ISA circuits. | Yes | N/A | (circuit, observables)\n",
+    "`backend_name` | str | Name of the backend to make the query.| No | If not provided, the least busy backend will be used. | \"ibm_fez\"\n",
+    "`instance` | str | The cloud resource name ov the instance to use in that format. | Yes | N/A |\"CRN\"\n",
+    "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
+    "</CloudContent>\n",
     "\n",
     "<Admonition type=\"caution\">\n",
     "  TEM currently has the following limitations:\n",
