--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -7,7 +7,16 @@
    "source": [
     "# Debug Qiskit Runtime jobs\n",
     "{/* cspell:ignore ZIIIII, IZIIII,IIZIII, IIIZII, IIIIZI, IIIIIZ, rdiff */}\n",
-    "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/debug-qiskit-runtime-jobs)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/debug-qiskit-runtime-jobs)\n",
+    "</Admonition>\n",
+    "</CloudContent>\n",
     "Before submitting a resource-intensive Qiskit Runtime workload to execute on hardware, you can use the Qiskit Runtime [`Neat` (Noisy Estimator Analyzer Tool)](/api/qiskit-ibm-runtime/debug-tools-neat#neat) class to verify that your Estimator workload is set up correctly, is likely to return  accurate results, uses the most appropriate options for the specified problem, and more.\n",
     "\n",
     "`Neat` Cliffordizes the input circuits for efficient simulation, while retaining its structure and depth. Clifford circuits suffer similar levels of noise and are a good proxy for studying the original circuit of interest.\n",
@@ -21,7 +30,12 @@
    "id": "0dc5bf2a-e536-4141-a77c-0ee407cbd9b2",
    "metadata": {},
    "source": [
-    "First, import the relevant packages and [authenticate to the Qiskit Runtime service.](/guides/setup-channel)"
+    "<LegacyContent>\n",
+    "First, import the relevant packages and [authenticate to the Qiskit Runtime service.](/guides/setup-channel)\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "First, import the relevant packages and [authenticate to the Qiskit Runtime service.](/guides/cloud-setup)\n",
+    "</CloudContent>"
    ]
   },
   {
