--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -5,7 +5,17 @@
    "id": "a47ac9aa-4bb9-4240-806e-9beabfd2dda2",
    "metadata": {},
    "source": [
-    "# Introduction to Qiskit Functions"
+    "# Introduction to Qiskit Functions\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/functions)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/functions)\n",
+    "</Admonition>\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -46,7 +56,7 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "Qiskit Functions simplify and accelerate utility-scale algorithm discovery and application development, by abstracting away parts of the quantum software development workflow. In this way, Qiskit Functions free up time normally spent hand-writing code and fine-tuning experiments.\n",
@@ -76,11 +86,16 @@
     "    ```\n",
     "    pip install qiskit-ibm-catalog\n",
     "    ```\n",
+    "<LegacyContent>\n",
     "1. Retrieve your API token from the [IBM Quantum account page](https://quantum.ibm.com/account), and activate your Python virtual environment.  See the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "1. Retrieve your API token from the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com/), and activate your Python virtual environment.  See the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up.\n",
+    "</CloudContent>\n",
     "\n",
     "    <span id=\"save-account\"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#functions-untrusted) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.)\n",
     "\n",
-    "    To use `save_account()`, run `python` in your shell to open a REPL (read-eval-print loop), then enter the following:\n",
+    "    To use `save_account()`, run `python` in your shell, then enter the following:\n",
     "\n",
     "    ```python\n",
     "    from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
@@ -88,7 +103,7 @@
     "    QiskitFunctionsCatalog.save_account(token=\"<your-token>\")\n",
     "    ```\n",
     "\n",
-    "    Close out of the REPL with `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitFunctionsCatalog()`."
+    "    Type `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitFunctionsCatalog()`."
    ]
   },
   {
@@ -250,7 +265,7 @@
    "source": [
     "job = ibm_cf.run(\n",
     "    pubs=[(circuit, observable)],\n",
-    "    instance=instance,  # E.g. \"ibm-q/open/main\"\n",
+    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_kyiv\"\n",
     ")\n",
     "\n",
