--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -5,7 +5,18 @@
    "id": "cb8aed01-2218-4524-b769-94e3f481b25f",
    "metadata": {},
    "source": [
-    "# Get backend information with Qiskit"
+    "# Get backend information with Qiskit\n",
+    "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/get-qpu-information)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/get-qpu-information)\n",
+    "</Admonition>\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -54,8 +65,12 @@
    "metadata": {},
    "source": [
     "## List backends\n",
-    "\n",
-    "To view the backends you have access to, you can either view a list on the [Compute resources page,](https://quantum.ibm.com/services/resources?tab=yours) or you can use the [`QiskitRuntimeService.backends()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backends) method. This method returns a list of [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instances:"
+    "<LegacyContent>\n",
+    "To view the backends you have access to, you can either view a list on the [Compute resources page,](https://quantum.ibm.com/services/resources?tab=yours) or you can use the [`QiskitRuntimeService.backends()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backends) method. This method returns a list of [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instances:\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "To view the backends you have access to, you can either view a list on the [Compute resources page,](https://quantum.cloud.ibm.com/computers) or you can use the [`QiskitRuntimeService.backends()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backends) method. This method returns a list of [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instances:\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -81,7 +96,7 @@
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(instance=\"ibm-q/open/main\")\n",
+    "service = QiskitRuntimeService(instance=\"your-instance\")\n",
     "\n",
     "service.backends()"
    ]
