--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "<Admonition type=\"note\" title=\"Using Fractional Gates\">\n",
     "    If you wish to use the newly supported [fractional gates](./fractional-gates), you will need to set `use_fractional_gates=True` when requesting a backend from a `QiskitRuntimeService` instance. For example:\n",
-    "    ``` python\n",
+    "    ```python\n",
     "    service = QiskitRuntimeService()\n",
     "    fractional_gate_backend = service.least_busy(use_fractional_gates=True)\n",
     "    ```\n",
@@ -326,7 +326,7 @@
    "source": [
     "### 3. Initialize the Qiskit Runtime Sampler\n",
     "\n",
-    "When you initialize the Sampler, use the `mode` parameter to specify the mode you want it to run in.  Possible values are `batch`, `session`, or `backend` objects for batch, session, and job execution mode, respectively. For more information, see [Introduction to Qiskit Runtime execution modes.](execution-modes)"
+    "When you initialize the Sampler, use the `mode` parameter to specify the mode you want it to run in.  Possible values are `batch`, `session`, or `backend` objects for batch, session, and job execution mode, respectively. For more information, see [Introduction to Qiskit Runtime execution modes.](execution-modes) <CloudContent>Note that Open Plan users cannot submit session jobs.</CloudContent>"
    ]
   },
   {
